<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmento">


    <!-- Marco de cualidades -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="394dp"
        android:layout_height="296dp"
        android:src="@drawable/borde_cualidades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.921" />

    <!-- Nombres stats -->
    <TextView
        android:id="@+id/lblStats"
        style="@style/stlCualidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cualidades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <TextView
        android:id="@+id/lblVida"
        style="@style/stlVida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />


    <TextView
        android:id="@+id/lblFuerza"
        style="@style/stlFuerza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuerza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/lblMagia"
        style="@style/stlMagia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />


    <TextView
        android:id="@+id/lblVelocidad"
        style="@style/stlVelocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velocidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />



    <!-- Barras de progreso para estadísticas -->

    <ProgressBar
        android:id="@+id/txtVida"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="153dp"
        android:layout_height="26dp"
        android:max="100"
        android:progress="75"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/color_vida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />


    <ProgressBar
        android:id="@+id/txtFuerza"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="153dp"
        android:layout_height="26dp"
        android:max="100"
        android:progress="50"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/color_fuerza"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.746" />


    <ProgressBar
        android:id="@+id/txtMagia"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="153dp"
        android:layout_height="26dp"
        android:max="100"
        android:progress="25"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/color_magia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811" />


    <ProgressBar
        android:id="@+id/txtVelocidad"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="153dp"
        android:layout_height="26dp"
        android:max="100"
        android:progress="60"
        android:progressBackgroundTint="@color/white"
        android:progressTint="@color/color_velocidad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />


    <!-- Labels de nº de Stats -->
    <TextView
        android:id="@+id/nVida"
        style="@style/stlNumVida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681" />


    <TextView
        android:id="@+id/nFuerza"
        style="@style/stlNumFuerza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />


    <TextView
        android:id="@+id/nMagia"
        style="@style/stlNumMagia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />


    <TextView
        android:id="@+id/nVelocidad"
        style="@style/stlNumVelocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.874" />


    <!-- CardView con imagen del personaje -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="296dp"
        android:layout_height="296dp"
        app:cardCornerRadius="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13">

        <ImageView
            android:id="@+id/imgPj"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintHorizontal_bias="0.496" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/btnReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/reiniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.969"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/fondoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/nombre"
        app:layout_constraintBottom_toTopOf="@+id/lblStats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959" />

    <TextView
        android:id="@+id/lblNombre"
        style="@style/stlNombrePj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/fondoNombre"
        app:layout_constraintEnd_toEndOf="@+id/fondoNombre"
        app:layout_constraintStart_toStartOf="@+id/fondoNombre"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>
